<resources>
    <string name="app_name">PetroChemical</string>
    <string name="facebook_app_id">"YOUR APP ID"</string>
    <string name="fb_login_protocol_scheme">"ID"</string>
    <string name="title_activity_home_page">HomePage</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="name">Name</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="email">Email</string>
    <string name="female">Female</string>
    <string name="i_am">I am</string>
    <string name="male">Male</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="err_msg_required">Valid input required</string>
    <string name="err_msg_email">Please enter a valid Email</string>
    <string name="err_msg_password">Please enter a name</string>
    <string name="err_msg_name">enter a password</string>
    <string name="err_msg_dateOfBirth">Enter a valid date of birth</string>
    <string name="logout">logout</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email_field">Email</string>
    <string name="name_field">Name</string>
    <string name="password_field">Password</string>
    <string name="register">Register</string>
    <string name="sign_up_">Sign Up</string>
    <string name="News">News</string>
    <string name="game">game</string>
    <string name="night_mode">Night Mode</string>
    <string name="for_better_readability_at_night">For better readability at night</string>
    <string name="settings_page">Settings Page</string>
    <string name="DNswitch">Switch</string>
</resources>
