<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true"
    android:layout_alignParentTop="true"
    android:background="#263446"
    android:orientation="vertical"
    tools:ignore="UselessParent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/signUpToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="#ff6f56"
        android:minHeight="?attr/actionBarSize"
        app:titleTextColor="@android:color/white"/>

    <com.github.florent37.materialtextfield.MaterialTextField
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:mtf_image="@drawable/name_edit"
        android:id="@+id/materialTextField3"
        android:layout_above="@+id/materialTextField7"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">


        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_field"
            android:inputType="textPersonName"
            android:textColor="#000000"
            android:textColorHint="#000000" />

    </com.github.florent37.materialtextfield.MaterialTextField>

    <com.github.florent37.materialtextfield.MaterialTextField
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:mtf_image="@drawable/ic_email_grey"
        android:id="@+id/materialTextField7"
        android:layout_above="@+id/materialTextField4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <EditText
            android:id="@+id/Email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_field"
            android:inputType="textEmailAddress" />

    </com.github.florent37.materialtextfield.MaterialTextField>

    <com.github.florent37.materialtextfield.MaterialTextField
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:mtf_image="@drawable/pasword_icon"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/materialTextField4">

        <EditText
            android:id="@+id/Password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890#$@*%"
            android:hint="@string/password_field"
            android:inputType="textPassword" />

    </com.github.florent37.materialtextfield.MaterialTextField>

    <com.github.florent37.materialtextfield.MaterialTextField
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:mtf_image="@drawable/pasword_icon"
        android:layout_below="@+id/materialTextField4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:id="@+id/materialTextField6">

        <EditText
            android:id="@+id/Confirm_Password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890#$@*%"
            android:hint="@string/confirm_password"
            android:inputType="textPassword" />

    </com.github.florent37.materialtextfield.MaterialTextField>

    <Button
        android:id="@+id/Signbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#ff6f56"
        android:text="@string/sign_up_"
        android:textColor="#ffffff"
        android:layout_marginBottom="43dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>

