<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways|"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    </android.support.design.widget.AppBarLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/setting_marginLeft"
        android:text="@string/settings_page"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:layout_below="@+id/appbar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="@dimen/setting_textSize"/>

    <ToggleButton
        android:id="@+id/dayNight_Switch"
        android:layout_width="@dimen/Night_switchSizeWidth"
        android:layout_height="@dimen/Night_switchSizeHeight"
        android:layout_marginTop="31dp"
        android:checked="false"
        android:text="@string/DNswitch"
        android:layout_below="@+id/facebookIN"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:id="@+id/Day_Night"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/night_mode"
        android:textColor="@color/TextP"
        android:textSize="@dimen/night_TextSize"
        android:layout_alignBaseline="@+id/dayNight_Switch"
        android:layout_alignBottom="@+id/dayNight_Switch"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignStart="@+id/textView" />

    <TextView
        android:id="@+id/day_night_des"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/Day_Night"
        android:layout_alignStart="@+id/Day_Night"
        android:layout_below="@+id/Day_Night"
        android:text="@string/for_better_readability_at_night" />

    <Button
        android:id="@+id/facebookIN"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView"
        android:layout_marginTop="17dp"
        android:background="@color/com_facebook_blue"
        android:drawableLeft="@drawable/fb"
        android:paddingLeft="25dp"
        android:text="Invite with facebook"
        android:textColor="@android:color/white"
        android:textSize="12sp" />

    <!--<ToggleButton-->
        <!--android:id="@+id/Notification_btn"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_alignLeft="@+id/dayNight_Switch"-->
        <!--android:layout_alignStart="@+id/dayNight_Switch"-->
        <!--android:layout_centerVertical="true"-->
        <!--android:layout_marginRight="@dimen/Night_switchMarginEnd"-->
        <!--android:text="Button" />-->

</RelativeLayout>